Remove javafx web dependency